--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <button onclick="addTask()">Click</button>
             </div>
             <ul id="list-container">
-                <!-- <li class="checked">Task 1</li>
+                <li class="checked">Task 1</li>
                 <li>Task 2</li>
                 <li>Task 3</li>
-            </ul> -->
+            </ul>
         </div>  
     </div>
     <script src="script.js"></script>
