New google feature

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <a href="www.google.com">google</a>
         <div class="todo-app">
             <h2>To-Do-list <img src="icon.png" ></h2>
             <div class="row">
